<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonRxSelectContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_select_contact" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="16dp"
            android:alpha="0.5"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonWebSimple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_null_gr_web" />

        <Button
            android:id="@+id/buttonWebChrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_null_gr_web_chrome" />

        <Button
            android:id="@+id/buttonMailTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_null_gr_mail" />

        <Button
            android:id="@+id/buttonCallTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_null_gr_phone" />

        <Button
            android:id="@+id/buttonRoteTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_null_gr_location" />

        <Button
            android:id="@+id/buttonShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_null_gr_share" />

    </LinearLayout>

</ScrollView>