<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectedDateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:text="Selected Date" />

        <Button
            android:id="@+id/buttonSelectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_select_date" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="16dp"
            android:alpha="0.5"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonFormat1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_reformat_1" />

        <Button
            android:id="@+id/buttonFormat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_reformat_2" />

        <Button
            android:id="@+id/buttonFormat3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_reformat_3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="16dp"
            android:alpha="0.5"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonIsToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_is_today" />

        <Button
            android:id="@+id/buttonPlusMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_plus_month" />

        <Button
            android:id="@+id/buttonMinus3Days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_minus_3_days" />

        <Button
            android:id="@+id/buttonWithoutTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_without_time" />

    </LinearLayout>
</ScrollView>