<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.nullgr.androidcore.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stringSampleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pxToDpExampleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_enter_px_value"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonConvertPxToDp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_convert" />

        <EditText
            android:id="@+id/dpToPxExampleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_enter_dp_value"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonConvertDpToPx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_convert" />

        <Button
            android:id="@+id/buttonShowScreenSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_screen_size" />

        <ImageView
            android:id="@+id/imageByName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/buttonSetImageByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_image_by_name" />

    </LinearLayout>
</ScrollView>