<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/containerFingerprint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fingerprintStatusImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:background="@drawable/background_fingerprint"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_fingerprint" />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fingerprintStatusImageView"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/title_fingerprint_start_listen"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonResetFingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/statusTextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/btn_reset" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setUpFingerprintContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/headerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/title_set_any_word_to_save"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/secureTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/headerTextView"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:hint="@string/hint_secrete_word"
                android:inputType="text"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/secureTextInput"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/btn_save_secure" />

        </RelativeLayout>

    </FrameLayout>

    <Button
        android:id="@+id/buttonFingerprintDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_fingerprint_dialog" />

</LinearLayout>